--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Climate Change: A Global Narrative</title>
+    <title>S&P 500: Market Events & Their Impact</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
-    <script src="https://d3js.org/topojson.v3.min.js"></script>
+    <script src="https://d3js.org/d3-annotation.v2.min.js"></script>
     <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             color: #333;
-            overflow-x: hidden;
+            min-height: 100vh;
         }
 
         .container {
@@ -24,18 +28,18 @@
 
         .header {
             text-align: center;
-            color: white;
             margin-bottom: 30px;
+            color: white;
         }
 
         .header h1 {
-            font-size: 2.5em;
+            font-size: 2.5rem;
             margin-bottom: 10px;
             text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
         }
 
         .header p {
-            font-size: 1.2em;
+            font-size: 1.2rem;
             opacity: 0.9;
         }
 
@@ -43,62 +47,63 @@
             background: white;
             border-radius: 15px;
             box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            margin-bottom: 30px;
-            overflow: hidden;
-            display: none;
-        }
-
-        .scene-container.active {
-            display: block;
-        }
-
-        .scene-header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-
-        .scene-header h2 {
-            margin: 0;
-            font-size: 1.8em;
-        }
-
-        .scene-content {
             padding: 30px;
-            min-height: 500px;
+            margin-bottom: 30px;
+            min-height: 600px;
+        }
+
+        .scene-title {
+            font-size: 2rem;
+            color: #2c3e50;
+            margin-bottom: 20px;
+            text-align: center;
+            border-bottom: 3px solid #3498db;
+            padding-bottom: 10px;
+        }
+
+        .scene-description {
+            font-size: 1.1rem;
+            color: #555;
+            margin-bottom: 30px;
+            text-align: center;
+            line-height: 1.6;
         }
 
         .chart-container {
-            width: 100%;
-            height: 400px;
-            margin: 20px 0;
             position: relative;
+            margin: 20px 0;
         }
 
         .navigation {
             display: flex;
             justify-content: center;
-            gap: 15px;
-            margin-top: 30px;
+            gap: 20px;
+            margin: 30px 0;
         }
 
         .nav-btn {
             padding: 12px 24px;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            font-size: 1rem;
             border: none;
             border-radius: 25px;
             cursor: pointer;
-            font-size: 16px;
-            font-weight: 600;
             transition: all 0.3s ease;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+            font-weight: 600;
+        }
+
+        .nav-btn.primary {
+            background: linear-gradient(45deg, #3498db, #2980b9);
+            color: white;
+        }
+
+        .nav-btn.secondary {
+            background: linear-gradient(45deg, #95a5a6, #7f8c8d);
+            color: white;
         }
 
         .nav-btn:hover {
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(0,0,0,0.3);
+            box-shadow: 0 5px 15px rgba(0,0,0,0.2);
         }
 
         .nav-btn:disabled {
@@ -109,63 +114,62 @@
 
         .progress-bar {
             width: 100%;
-            height: 6px;
-            background: #e0e0e0;
-            border-radius: 3px;
+            height: 8px;
+            background: #ecf0f1;
+            border-radius: 4px;
             margin: 20px 0;
             overflow: hidden;
         }
 
         .progress-fill {
             height: 100%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            transition: width 0.3s ease;
-            width: 0%;
-        }
-
-        .annotation {
-            position: absolute;
-            background: rgba(255, 255, 255, 0.95);
-            border: 2px solid #667eea;
-            border-radius: 8px;
-            padding: 10px;
-            font-size: 12px;
-            max-width: 200px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-            pointer-events: none;
-            z-index: 1000;
-        }
-
-        .annotation::before {
-            content: '';
-            position: absolute;
-            top: -8px;
-            left: 20px;
-            width: 0;
-            height: 0;
-            border-left: 8px solid transparent;
-            border-right: 8px solid transparent;
-            border-bottom: 8px solid #667eea;
+            background: linear-gradient(90deg, #3498db, #2ecc71);
+            transition: width 0.5s ease;
+            border-radius: 4px;
         }
 
         .tooltip {
             position: absolute;
             background: rgba(0, 0, 0, 0.8);
             color: white;
-            padding: 8px 12px;
-            border-radius: 6px;
+            padding: 10px;
+            border-radius: 5px;
             font-size: 12px;
             pointer-events: none;
-            z-index: 1000;
             opacity: 0;
             transition: opacity 0.3s;
+        }
+
+        .annotation {
+            font-size: 14px;
+            font-weight: 600;
+        }
+
+        .scene-indicator {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+            margin: 20px 0;
+        }
+
+        .indicator {
+            width: 12px;
+            height: 12px;
+            border-radius: 50%;
+            background: #bdc3c7;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .indicator.active {
+            background: #3498db;
+            transform: scale(1.2);
         }
 
         .legend {
             display: flex;
             justify-content: center;
-            align-items: center;
-            gap: 20px;
+            gap: 30px;
             margin: 20px 0;
             flex-wrap: wrap;
         }
@@ -180,117 +184,43 @@
         .legend-color {
             width: 20px;
             height: 20px;
-            border-radius: 4px;
+            border-radius: 3px;
         }
 
-        .scene-description {
-            text-align: center;
-            margin-bottom: 30px;
-            font-size: 1.1em;
-            line-height: 1.6;
-            color: #555;
+        .hidden {
+            display: none;
         }
     </style>
 </head>
 <body>
     <div class="container">
         <div class="header">
-            <h1>🌍 Climate Change: A Global Narrative</h1>
-            <p>Exploring the impact of climate change through interactive data visualization</p>
+            <h1>S&P 500: Market Events & Their Impact</h1>
+            <p>Exploring how major economic events shaped the world's most important stock index</p>
         </div>
 
         <div class="progress-bar">
             <div class="progress-fill" id="progressFill"></div>
         </div>
 
-        <!-- Scene 1: Global Temperature Trends -->
-        <div class="scene-container active" id="scene1">
-            <div class="scene-header">
-                <h2>Scene 1: Rising Global Temperatures</h2>
-            </div>
-            <div class="scene-content">
-                <div class="scene-description">
-                    The Earth's average temperature has been steadily rising since the Industrial Revolution. 
-                    This chart shows the global temperature anomalies from 1880 to 2023, revealing a clear warming trend.
-                </div>
-                <div class="chart-container" id="chart1"></div>
-                <div class="legend">
-                    <div class="legend-item">
-                        <div class="legend-color" style="background: #ff6b6b;"></div>
-                        <span>Temperature Anomaly (°C)</span>
-                    </div>
-                </div>
-            </div>
+        <div class="scene-indicator">
+            <div class="indicator active" data-scene="0"></div>
+            <div class="indicator" data-scene="1"></div>
+            <div class="indicator" data-scene="2"></div>
         </div>
 
-        <!-- Scene 2: CO2 Emissions by Region -->
-        <div class="scene-container" id="scene2">
-            <div class="scene-header">
-                <h2>Scene 2: Carbon Emissions by Region</h2>
-            </div>
-            <div class="scene-content">
-                <div class="scene-description">
-                    Different regions contribute differently to global carbon emissions. 
-                    This visualization shows the distribution of CO2 emissions across major world regions.
-                </div>
-                <div class="chart-container" id="chart2"></div>
-                <div class="legend">
-                    <div class="legend-item">
-                        <div class="legend-color" style="background: #4ecdc4;"></div>
-                        <span>Asia Pacific</span>
-                    </div>
-                    <div class="legend-item">
-                        <div class="legend-color" style="background: #45b7d1;"></div>
-                        <span>North America</span>
-                    </div>
-                    <div class="legend-item">
-                        <div class="legend-color" style="background: #96ceb4;"></div>
-                        <span>Europe</span>
-                    </div>
-                    <div class="legend-item">
-                        <div class="legend-color" style="background: #feca57;"></div>
-                        <span>Other Regions</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Scene 3: Renewable Energy Growth -->
-        <div class="scene-container" id="scene3">
-            <div class="scene-header">
-                <h2>Scene 3: The Rise of Renewable Energy</h2>
-            </div>
-            <div class="scene-content">
-                <div class="scene-description">
-                    Despite the challenges, there's hope in the rapid growth of renewable energy sources. 
-                    This chart shows the exponential increase in renewable energy capacity worldwide.
-                </div>
-                <div class="chart-container" id="chart3"></div>
-                <div class="legend">
-                    <div class="legend-item">
-                        <div class="legend-color" style="background: #6c5ce7;"></div>
-                        <span>Solar Energy</span>
-                    </div>
-                    <div class="legend-item">
-                        <div class="legend-color" style="background: #a29bfe;"></div>
-                        <span>Wind Energy</span>
-                    </div>
-                    <div class="legend-item">
-                        <div class="legend-color" style="background: #fd79a8;"></div>
-                        <span>Hydroelectric</span>
-                    </div>
-                </div>
-            </div>
+        <div class="scene-container" id="sceneContainer">
+            <!-- Scene content will be dynamically populated -->
         </div>
 
         <div class="navigation">
-            <button class="nav-btn" id="prevBtn" onclick="previousScene()">← Previous</button>
-            <button class="nav-btn" id="nextBtn" onclick="nextScene()">Next →</button>
+            <button class="nav-btn secondary" id="prevBtn">← Previous</button>
+            <button class="nav-btn primary" id="nextBtn">Next →</button>
         </div>
     </div>
 
     <div class="tooltip" id="tooltip"></div>
 
-    <script src="narrative.js"></script>
+    <script src="script.js"></script>
 </body>
 </html> 
