minor changes to final draft 1

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <button id="prev-btn">Previous</button>
             <button id="next-btn">Next</button>
         </div>
-        <div id="tooltip-instructions">Hover over any data point to see its date and price.</div>
+        <div id="tooltip-instructions">Hover over any data point to see its S&P 500 closing price and date!</div>
     </div>
     <script src="script.js"></script>
 </body>
